{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 10,
  "lineage": "e399943f-f1d0-c9af-8f1d-c9a1213121e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093685644326:security-group/sg-02c3d31fe6b0791f2",
            "description": "Security group for EKS cluster mykubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c3d31fe6b0791f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-cluster-sg-mykubernetes",
            "name_prefix": "",
            "owner_id": "093685644326",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg-mykubernetes"
            },
            "tags_all": {
              "Name": "eks-cluster-sg-mykubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e815ac75acad29bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093685644326",
            "id": "sg-02c3d31fe6b0791f2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093685644326:security-group/sg-04858f0c55f01fc81",
            "description": "Security group for EKS worker nodes mykubernetes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04858f0c55f01fc81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "eks-worker-sg-mykubernetes",
            "name_prefix": "",
            "owner_id": "093685644326",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-sg-mykubernetes"
            },
            "tags_all": {
              "Name": "eks-worker-sg-mykubernetes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e815ac75acad29bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093685644326",
            "id": "sg-04858f0c55f01fc81",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:093685644326:vpc/vpc-0b332fafdb99a9aa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ad3da2a372f000b",
            "default_route_table_id": "rtb-06def33156b0afcab",
            "default_security_group_id": "sg-0cde23130d947ac72",
            "dhcp_options_id": "dopt-08427768247c3776a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b332fafdb99a9aa0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06def33156b0afcab",
            "owner_id": "093685644326",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093685644326",
            "id": "vpc-0b332fafdb99a9aa0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}